--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:20
 WORKDIR /server/src/app
+RUN npm install -g npm@10.8.2
+RUN npm init -y
 COPY package*.json ./
 RUN npm install -g typescript
 RUN npm install
