--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -4,9 +4,8 @@ RUN npm install -g npm@10.8.2
 RUN npm init -y
 COPY package*.json ./
 RUN npm install -g typescript
-RUN npm install
 COPY . .
 RUN npm install
-RUN tsc
+RUN npm run build
 EXPOSE 5000
 CMD ["npm", "start"]
