--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -6,5 +6,6 @@ COPY package*.json ./
 RUN npm install -g typescript
 COPY . .
 RUN npm install
+RUN npm run build
 EXPOSE 5000
-CMD ["npm", "build" "start"]
+CMD ["npm", "start"]
